// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modals AlertModal renders correctly 1`] = `
.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  onScrollCapture={[Function]}
  onTouchMoveCapture={[Function]}
  onWheelCapture={[Function]}
>
  <div
    className="modal style"
  >
    <div
      className="overlay clickable"
      onClick={[Function]}
    />
    <div
      className="modal_contents alert_modal_wrapper"
    >
      <div
        className="alert_modal_heading"
      >
        <svg
          aria-hidden="true"
          className="sc-AxmLO c0 alert_modal_icon"
          fill="currentColor"
          version="1.1"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            fillRule="evenodd"
          />
        </svg>
        heading
      </div>
      <div
        className="alert_modal_contents"
      >
        children
      </div>
      <div
        className="alert_modal_buttons"
      >
        <button
          className="button_outline alert_button"
          onClick={[Function]}
          type="button"
        >
          a
        </button>
        <button
          className="button_outline alert_button"
          onClick={[Function]}
          type="button"
        >
          b
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`modals ContinueModal renders correctly 1`] = `
<div
  className="modal"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents alert_modal_wrapper no_alert_header"
  >
    <div
      className="alert_modal_contents"
    >
      children
    </div>
    <div
      className="alert_modal_buttons"
    >
      <button
        className="button_outline alert_button"
        onClick={[Function]}
        title="Cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        className="button_outline alert_button"
        onClick={[Function]}
        title="Continue"
        type="button"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`modals Modal renders correctly 1`] = `
<div
  onScrollCapture={[Function]}
  onTouchMoveCapture={[Function]}
  onWheelCapture={[Function]}
>
  <div
    className="modal foo"
  >
    <div
      className="overlay clickable"
      onClick={[Function]}
    />
    <div
      className="modal_contents"
    >
      children
    </div>
  </div>
</div>
`;

exports[`modals Modal renders correctly with optional heading 1`] = `
<div
  onScrollCapture={[Function]}
  onTouchMoveCapture={[Function]}
  onWheelCapture={[Function]}
>
  <div
    className="modal foo"
  >
    <div
      className="overlay clickable"
      onClick={[Function]}
    />
    <div
      className="modal_contents"
    >
      <h3
        className="modal_heading"
      >
        Heading Visible
      </h3>
      children
    </div>
  </div>
</div>
`;

exports[`modals ModalPage renders correctly 1`] = `
.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className="modal_page"
>
  <div
    className="overlay"
  />
  <header
    className="title_bar title_bar"
  >
    <button
      className="button_flat title_button inverted"
      onClick={[Function]}
      title="Back"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0 icon"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.429 17.019l-4.242-4.59 4.242-4.59-1.312-1.41-5.545 6 5.545 6z"
          fillRule="evenodd"
        />
      </svg>
      back
    </button>
    <h1
      className="title right"
    >
      Title
    </h1>
    <span
      className="separator"
    >
      |
    </span>
    <h2
      className="subtitle"
    >
      Subtitle
    </h2>
  </header>
  <div
    className="modal_page_contents"
  >
    children
  </div>
</div>
`;

exports[`modals Overlay renders correctly 1`] = `
<div
  className="overlay clickable"
  onClick={[Function]}
/>
`;

exports[`modals SpinnerModalPage renders correctly 1`] = `
.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className="modal"
>
  <header
    className="title_bar title_bar"
  >
    <button
      className="button_flat title_button inverted"
      disabled={true}
      title="Back"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0 icon"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.429 17.019l-4.242-4.59 4.242-4.59-1.312-1.41-5.545 6 5.545 6z"
          fillRule="evenodd"
        />
      </svg>
      back
    </button>
    <h1
      className="title right"
    >
      Title
    </h1>
    <span
      className="separator"
    >
      |
    </span>
    <h2
      className="subtitle"
    >
      Subtitle
    </h2>
  </header>
  <div
    className="modal"
  >
    <div
      className="overlay"
    />
    <div
      className="spinner_modal_contents"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0 spinner_modal_icon spin"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
          fillRule="evenodd"
        />
      </svg>
      <p />
    </div>
  </div>
</div>
`;
